mise en place bootstrap

--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -1,7 +1,10 @@
 = @user.firstname
 = link_to "nouveau flux ", new_flux_path
 
-- @fluxes.each do |flux|
-  %h1= flux.title
-  - flux.actus.each do |actu|
-    %p= link_to actu.title, actu.entry_id, target: :blank
+.container
+  .row
+    - @fluxes.each do |flux|
+      .col-md-6
+        %h1= flux.title
+        - flux.actus.each do |actu|
+          %p= link_to actu.title, actu.entry_id, target: :blank
