--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -4,4 +4,7 @@
 - @fluxes.each do |flux|
   %h1= flux.title
   - flux.actus.each do |actu|
-    %p= link_to actu.title, actu.entry_id, target: :blank
+    %p
+      = link_to actu.title, actu.entry_id, target: :blank
+      = link_to root_path, method: :get do
+        %span.glyphicon.glyphicon-eye-close
