--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -11,6 +11,9 @@
               %h2= flux.title
         - flux.actus.each do |actu|
           .panel-body
-            = link_to truncate(actu.title, length: 75), actu.entry_id, target: :blank
-            = link_to root_path, method: :get do
-              %span.glyphicon.glyphicon-eye-close.pull-right
+            = link_to truncate(actu.title, length: 75), actu.url, target: :blank
+            = link_to reading_path(actu.id), method: :get do
+              - if actu.read
+                %span.glyphicon.glyphicon-eye-open.pull-right
+              - else
+                %span.glyphicon.glyphicon-eye-close.pull-right
