--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -12,7 +12,7 @@
         - flux.actus.each do |actu|
           .panel-body
             = link_to truncate(actu.title, length: 75), actu.url, target: :blank
-            = link_to reading_path(actu.id), method: :get do
+            = link_to flux_article_reading_path(flux_id: flux.id, article_id: actu.id), method: :get do
               - if actu.read
                 %span.glyphicon.glyphicon-eye-open.pull-right
               - else
