--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -1,10 +1,10 @@
 = @user.firstname
 = link_to "nouveau flux ", new_flux_path
 
-.container
+.container#myfluxes
   .row
     - @fluxes.each do |flux|
       .col-md-6
         %h1= flux.title
         - flux.actus.each do |actu|
-          %p= link_to actu.title, actu.entry_id, target: :blank
+          %p= link_to actu.title, actu.url, target: :blank
