--- a/app/views/users/dashboard.haml
+++ b/app/views/users/dashboard.haml
@@ -2,7 +2,7 @@
 = link_to "nouveau flux ", new_flux_path
 
 .container
-  .row
+  .row#myfluxes
     - @fluxes.each do |flux|
       .col-md-6
         .panel-primary
