--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,7 +6,7 @@
 {
   margin-top: 20px;
 
-  #test
+  .panel-title
   {
     white-space: nowrap;
     overflow: hidden;
@@ -16,12 +16,23 @@
     h2
     {
       font-size: 1.5em;
+      display: inline-block;
+    }
+    .line
+    {
+      float: right;
+      display: inline-block;
+      
+      .white
+      {
+        color: white;
+      }
     }
   }
 
   .panel-body
   {
     background-color: #E0E0E0;
-    
+
   }
 }
