--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "users";
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  margin-bottom: 100px;
+}
